fixing the positioning and legibility of facets

--- a/disa_app/static/scss/components/_tabulator.scss
+++ b/disa_app/static/scss/components/_tabulator.scss
@@ -5,7 +5,6 @@
     .tabulator-tableHolder {
       overflow: scroll;
     }
-
     .tabulator-footer {
       position: absolute;
       text-align: center;
@@ -21,4 +20,17 @@
       flex-wrap: wrap;
     }
   }
+}
+
+// facet dropdowns
+.tabulator-edit-select-list {
+  position: absolute;
+  border: solid 1px rgba($info,0.5);
+  border-width: 0 1px 1px 1px;
+  box-shadow: $box-shadow;
+  .tabulator-edit-select-list-item {
+    padding: 0.25rem .5rem;
+    &:hover {
+    background-color: $info;
+  }}
 }
